# EAP-trigger-statements-

./: .gitignore  appeal_documents.xlsx  pyproject.toml
extracted_triggers/: extracted_triggers.json  extracted_triggers_openai.json  triggers_gemini.xlsx  triggers_openai.xlsx
scripts/: __init__.py  batch_runner.py  config.py  fetch_appeal_documents.py  json_to_excel.py  llm_extractor.py  main.py  openai_config.py  openai_llm_extractor.py  openai_main.py  page_selector.py  payload_builder.py  pdf_processor.py
